@@ -70,14 +70,13 @@ public class SerializePrinting {
       IOException {
     // BSP job configuration
     HamaConfiguration conf = new HamaConfiguration();
-    // Execute locally
-    // conf.set("bsp.master.address", "local");
 
     BSPJob bsp = new BSPJob(conf, SerializePrinting.class);
     // Set the job name
     bsp.setJobName("serialize printing");
     bsp.setBspClass(HelloBSP.class);
-
+    bsp.setNumBspTask(10);
+    
     BSPJobClient.runJob(bsp);
   }
 }
